# 7zap

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml
7Zap/: 7Zap.sln  CMakeLists.txt  Directory.Build.props  Directory.Packages.props  TidyBuild.custom.props  dirs.proj  global.json
7Zap/7Zap/: 7Zap.def  7Zap.h  7Zap.rc  7ZapTest.cpp  7ZapVersion.h  CMakeLists.txt  Extract7z.cpp  Update7z.cpp  UpdateCallback7Zap.cpp  UpdateCallback7Zap.h  pch.h
7Zap/7Zap.NET/: 7Zap.NET.csproj  7Zap.pinvoke.cs  CMakeLists.txt  Program.cs  SevenZap.cs
7Zap/7ZapTest/: 7ZapTest.cpp  CMakeLists.txt  PanelSwLzmaExtractCallback.cpp  PanelSwLzmaExtractCallback.h  PanelSwLzmaInStream.cpp  PanelSwLzmaInStream.h  PanelSwLzmaOutStream.cpp  PanelSwLzmaOutStream.h  WixLogMacros.h  pch.h
7Zap/Nuget/: 7Zap.NET.nuspec  7Zap.nuspec  7Zap.props
lzma-sdk/: CMakeLists.7zr.txt  CMakeLists.txt
lzma-sdk/C/: CMakeLists.txt  Ppmd7Enc.c
lzma-sdk/CPP/7zip/: IDecl.h
lzma-sdk/CPP/7zip/UI/Agent/: AgentOut.cpp
lzma-sdk/CPP/7zip/UI/Common/: DirItem.h  EnumDirItems.cpp
lzma-sdk/CPP/7zip/UI/Console/: ExtractCallbackConsole.cpp  HashCon.cpp  UpdateCallbackConsole.cpp  UpdateCallbackConsole.h
lzma-sdk/CPP/7zip/UI/GUI/: HashGUI.cpp  UpdateCallbackGUI.cpp
lzma-sdk/CPP/Common/: MyString.cpp  MyString.h
